--- a/login-register.html
+++ b/login-register.html
@@ -20,6 +20,11 @@
   </head>
   <body>
 	<div>
+		<!--
+		<div>
+			<img src="images/tango-icon.jpg" />
+		</div>
+		-->
 		<section>
 			<header>
 				<h1>State thy name and ye shall pass</h1>
