--- a/login-register.html
+++ b/login-register.html
@@ -51,11 +51,11 @@
 				<ul>
 					<li class="fb">
 						<img />
-						<button class="form-input">Hi  This Is Me</button>
+						<a class="form-input">Login with Facebook</a>
 					</li>
 					<li class="twitter">
 						<img />
-						<button class="form-input">Hi  This Is Me</button>						
+						<a class="form-input">Login with Twitter</a>						
 					</li>
 				</ul>	
 			</div>
